[package]
name = "riv"
version = "2.1.2"
authors = ["Rafal Michalski <royaltm75@gmail.com>"]
edition = "2018"
publish = false
repository = "https://github.com/royaltm/rust-royal-image-viewer"
homepage = "https://github.com/royaltm/rust-royal-image-viewer/"
readme = "README.md"
license = "GPL-3.0-or-later"
include = ["/src/", "/README.md"]
description = """
Royal Image Viewer
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.34.0"
css-color-parser = "0.1.2"
env_logger = "0.9"
image = "0.23"
log = "0.4"
minifb = "0.23"
num-traits = "0.2"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = ["winuser", "winerror", "shellscalingapi", "wincon"]

[profile.release]
lto = true
opt-level = 3
